# renko

./: .gitignore  CMakeLists.txt  Makefile  test.cpp
glad/include/glad/: glad.h
include/: batchRenderer.h  indexBuffer.h  renderer.h  shader.h  texture.h  vertexArray.h  vertexBuffer.h  vertexBufferLayout.h
include/renko/: core.h  particle.h  precision.h
notes/: 01-19.txt  opengl.md
res/shaders/: Basic.shader  TestBatch.shader  TestBatchRenderer.shader  TestQuadSolid.shader  TestTexQuad.shader
src/: batchRenderer.cpp  indexBuffer.cpp  particle.cpp  renderer.cpp  renkoTest.cpp  shader.cpp  test.cpp  texture.cpp  vertexArray.cpp  vertexBuffer.cpp  vertexBufferLayout.cpp
src/tests/: Test.h  TestClearColor.cpp  TestClearColor.h  test.cpp  test.h  testBatch.cpp  testBatch.h  testBatchRenderer.cpp  testBatchRenderer.h  testClearColor.cpp  testClearColor.h  testQuadSolid.cpp  testQuadSolid.h  testTexQuad.cpp  testTexQuad.h
tests/: gl.cpp
